navbar overflow fix

--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,7 @@ h2{
     width: 100%;
     height: 60px;
     color: #203852;
+    font-weight: 900;
     
 }
 
@@ -43,10 +44,11 @@ h2{
     justify-content: center;
     align-items: center;
     font-weight: bold;
+    box-sizing: border-box;
 
 }
 .navigator-route{
-    width: 50vw;
+    width: 49vw;
     height: 100%;
     border: 4px solid grey;
     box-sizing: border-box;
@@ -63,11 +65,14 @@ h2{
 
 .home{
  
-  width: 100%;
+  width: 50%;
   margin: auto;
   margin-top: 10px;
   height: 60vh;
   overflow-y: scroll;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 
 .add-task-btn{
